tests/errors/other/test_tc_other_05_comparison_type.pc
#import std.console;
int main() {
    for i in 0..5 {
        if i == "hello" {
            console.println("found");
        }
    }
    return 0;
}
